--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ visibility:hidden;
 
 
 
-<p class="has-text-align-center">irwh.in/<a href="https://github.com/Institute-for-ReWriting-World-History/the1854project">the1854project</a></p>
+<p class="has-text-align-center">irwh.in/<a href="https://github.com/Institute-for-ReWriting-World-History/Institute-for-ReWriting-World-History.github.io">1854</a></p>
 
 
 
