--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>The 1854 Project</title>
+	<title>The 1854 Project - IRWH</title>
 <meta name='robots' content='max-image-preview:large' />
 <link rel='dns-prefetch' href='http://stats.wp.com/' />
 <link rel="alternate" type="application/rss+xml" title="The 1854 Project &raquo; Feed" href="feed/index.html" />
