--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ visibility:hidden;
 
 
 <div class="wp-block-group is-layout-constrained wp-block-group-is-layout-constrained"><div class="wp-block-group__inner-container">
-<h4 class="wp-block-heading" style="font-style:normal;font-weight:400"><a href="https://archive.org/details/spiritoflaws1873mont/page/4/mode/2up" data-type="link" data-id="https://archive.org/details/spiritoflaws1873mont/page/4/mode/2up">The Great Game</a>, &#8220;<a href="https://archive.org/details/leviathanormatte00hobb_2/page/96/mode/2up" data-type="link" data-id="https://archive.org/details/leviathanormatte00hobb_2/page/96/mode/2up">a condition of Warre of every one against every one</a>,&#8221; has made the job of <a href="https://www.cs.uky.edu/~raphael/sol/sol-entries/gamma/334">know thyself</a> difficult for every one—the <a href="https://en.wikipedia.org/wiki/The_WEIRDest_People_in_the_World">celebrants</a>, for whom such &#8220;<a href="https://archive.org/details/standardeditiono21freu/page/162/mode/2up">traumas are no more than occasions for it [the ego] to gain pleasure</a>,&#8221; and <a href="https://en.wikipedia.org/wiki/The_Wretched_of_the_Earth">discontents</a>, who find themselves <a href="https://www.nytimes.com/images/blogs/papercuts/baldwin-and-buckley.pdf">underwriting</a> the <a href="https://archive.org/details/enigmaofcapitalc0000harv/page/n11/mode/2up"> fleeting happiness</a>, can rewriting world history from an Indic perspective serve as a panacea?</h4>
+<h4 class="wp-block-heading" style="font-style:normal;font-weight:400"><a href="https://archive.org/details/spiritoflaws1873mont/page/4/mode/2up" data-type="link" data-id="https://archive.org/details/spiritoflaws1873mont/page/4/mode/2up">The Great Game</a>, &#8220;<a href="https://archive.org/details/leviathanormatte00hobb_2/page/96/mode/2up" data-type="link" data-id="https://archive.org/details/leviathanormatte00hobb_2/page/96/mode/2up">a condition of Warre of every one against every one</a>,&#8221; has made the job of <a href="https://www.cs.uky.edu/~raphael/sol/sol-entries/gamma/334">know thyself</a> difficult for every one—the <a href="https://en.wikipedia.org/wiki/The_WEIRDest_People_in_the_World">celebrants</a>, for whom such &#8220;<a href="https://archive.org/details/standardeditiono21freu/page/162/mode/2up">traumas are no more than occasions for it [the ego] to gain pleasure</a>,&#8221; and <a href="https://en.wikipedia.org/wiki/The_Wretched_of_the_Earth">discontents</a>, who find themselves <a href="https://www.nytimes.com/images/blogs/papercuts/baldwin-and-buckley.pdf">underwriting</a> the <a href="https://archive.org/details/enigmaofcapitalc0000harv/page/n11/mode/2up"> fleeting happiness</a>, can rewriting world history from an Indic perspective serve as a panacea to the <a href="https://archive.org/details/in.ernet.dli.2015.104226/page/n15/mode/2up">crisis of the modern world</a>?</h4>
 
 
 
@@ -396,6 +396,10 @@ visibility:hidden;
 
 <li>Du Bois, William Edward Burghardt. <em>Darkwater: Voices from within the Veil.</em> Harcourt, Brace and Howe, 1920.</li>
 
+
+
+<li>Guénon, René. <em>The Crisis of the Modern World.</em>em> Translated by Arthur Osborne, Luzac & Co., 1942.</li>
+	
 
 
 <li>King of the Belgians. &#8220;Congolese Independence Speech by King Baudouin.&#8221; <em>The Ceremony Of The Proclamation Of The Congo’s Independence</em>, The Republic of Congo,, 30 June 1960. en.m.wikisource.org/wiki/Congolese_Independence_speech_by_King_Baudouin_on_June_30,_1960.</li>
