--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ visibility:hidden;
 
 
 
-<p class="has-text-align-center">irwh.in/<a href="https://github.com/Institute-for-ReWriting-World-History">2023/04/15/itihaspatrika/1854</a></p>
+<p class="has-text-align-center">irwh.in/<a href="irwh.in/vcrm/">irwh.in/vcrm/</a></p>
 
 
 
