--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ visibility:hidden;
 
 
 
-<p class="has-text-align-center"><a href="https://archive.org/details/worldvedicheritageahistoryofhistories-byp.n.oak/page/n21/mode/2up">1854 and World History</a> | <a href="irwh.in/the1854project/">The 1854 Project Book</a></p>
+<p class="has-text-align-center"><a href="https://archive.org/details/worldvedicheritageahistoryofhistories-byp.n.oak/page/n21/mode/2up">1854 and World History</a> | <a href="https://irwh.in/the1854project/">The 1854 Project Book</a></p>
 
 
 
