--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ visibility:hidden;
 
 
 
-<p class="has-text-align-center">irwh.in/<a href="https://vcrm.us">vcrm.us</a></p>
+<p class="has-text-align-center">irwh.in [<a href="https://vcrm.us">vcrm</a>]</p>
 
 
 
@@ -596,7 +596,7 @@ visibility:hidden;
 							</div><!-- .site-name -->
 
 			<div class="powered-by">
-				Resources For Students <a href="https://github.com/World-Vedic-Heritage-University">WVHU</a></div><!-- .powered-by -->
+				Resources For Students: <a href="https://github.com/World-Vedic-Heritage-University">WVHU</a></div><!-- .powered-by -->
 
 		</div><!-- .site-info -->
 	</footer><!-- #colophon -->
