--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ visibility:hidden;
 
 
 
-<p class="has-text-align-center"><em><a href="https://vcrm.irwh.in">The Vedic context of religions of man</a></em></p>
+<p class="has-text-align-center"><a href="https://github.com/Institute-for-ReWriting-World-History">irwh.in/2023/04/15/itihaspatrika/1854</a></p>
 
 
 
