--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ visibility:hidden;
 
 
 
-<p class="has-text-align-center has-normal-font-size">The 1854 Project</p>
+<p class="has-text-align-center has-normal-font-size"><a href="https://github.com/Institute-for-ReWriting-World-History">The 1854 Project</a></p>
 
 
 
@@ -330,10 +330,7 @@ visibility:hidden;
 <h4 class="wp-block-heading has-text-align-center" style="font-style:normal;font-weight:400;text-transform:none"><mark style="background-color:#000000" class="has-inline-color has-white-color">A rewriting of world history is necessary.</mark></h4>
 </div></div>
 
-
-
-<p class="has-text-align-center"><a href="https://github.com/Institute-for-ReWriting-World-History">irwh.in/2023/04/15/itihaspatrika/1854</a></p>
-
+<p class="has-text-align-center"><em><a href="https://vcrm.irwh.in">The Vedic context of religions of man</a></em></p>
 
 
 <details class="wp-block-details is-layout-flow wp-block-details-is-layout-flow"><summary>Bibliography</summary>
