--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@ visibility:hidden;
 
 
 
-<p class="has-text-align-center has-normal-font-size"><a href="https://github.com/Institute-for-ReWriting-World-History">The 1854 Project</a></p>
+<p class="has-text-align-center has-normal-font-size">The 1854 Project</p>
 
 
 
-<h4 class="wp-block-heading has-text-align-left" style="font-style:normal;font-weight:400">The 1854 Project is an ongoing initiative from <a href="https://web.archive.org/web/20080921185841/http://www.pnoak.com/pnoak_biography.html" data-type="link" data-id="https://web.archive.org/web/20080727075535/http://www.pnoak.com/pnoak_biography.html">The Institute for ReWriting World History</a> that began in April 2023, the 169th anniversary of the publication of <em><a href="https://archive.org/details/outlinesofphilos01bunsuoft/page/n5/mode/2up">Outlines of the Philosophy of Universal History, Applied to Language and Religion</a></em>. It aims to challenge <a href="https://archive.org/details/degradationofac00nisb/page/22/mode/2up">academic dogma</a> and present world history from an Indic perspective.</h4>
+<h4 class="wp-block-heading has-text-align-left" style="font-style:normal;font-weight:400"><a href="https://github.com/Institute-for-ReWriting-World-History">The 1854 Project</a> is an ongoing initiative from <a href="https://web.archive.org/web/20080921185841/http://www.pnoak.com/pnoak_biography.html" data-type="link" data-id="https://web.archive.org/web/20080727075535/http://www.pnoak.com/pnoak_biography.html">The Institute for ReWriting World History</a> that began in April 2023, the 169th anniversary of the publication of <em><a href="https://archive.org/details/outlinesofphilos01bunsuoft/page/n5/mode/2up">Outlines of the Philosophy of Universal History, Applied to Language and Religion</a></em>. It aims to challenge <a href="https://archive.org/details/degradationofac00nisb/page/22/mode/2up">academic dogma</a> and present world history from an Indic perspective.</h4>
 
 
 
